# AP_JigsawGame

./: .gitignore  =1.2.3  CMakeLists.txt  ErrorPuzzlePiece.cpp  ErrorPuzzlePiece.h  Factory.cpp  Factory.h  JigsawGameInterface.h  JigsawParser.cpp  JigsawParser.h  JigsawPuzzle.cpp  JigsawPuzzle.h  JigsawPuzzleAbstract.cpp  JigsawPuzzleAbstract.h  JigsawPuzzleAdvanced.cpp  JigsawPuzzleAdvanced.h  JigsawPuzzleRotate.cpp  JigsawPuzzleRotate.h  JigsawPuzzleRotations.cpp  JigsawPuzzleRotations.h  JigsawPuzzleRotations_OLD.cpp  JigsawPuzzleRotations_OLD.h  JigsawPuzzle_OLD.cpp  JigsawPuzzle_OLD.h  JigsawSolutionExistsChecks.cpp  JigsawSolutionExistsChecks.h  JigsawSolutionExistsRotationsAllowed.cpp  JigsawSolutionExistsRotationsAllowed.h  JigsawSolutionThread.cpp  JigsawSolutionThread.h  JigsawSolutionThread.hpp  NaiveSolutionExistenceCheck.h  PuzzleMatrix.cpp  PuzzleMatrix.h  PuzzlePiece.cpp  PuzzlePiece.h  PuzzlePieceMapInterface.h  PuzzlePieceRotation.cpp  PuzzlePieceRotation.h  PuzzlePiecesMap.cpp  (+43 more)
Archive/: gameFlow.h
alex_test_files/: checks.txt  error_input_file_2.txt  error_input_file_3.txt  in1-Solvable.txt  in1-format-error.txt  in1-format-error_res.txt  in2-Solvable.txt  in3-Unsolvable.txt  in3-format-error.txt  in4-Solvable.txt  in4-Unsolvable.txt  in4-Unsolvable_res.txt  in4-format-error_res.txt  in5-Solvable.txt  in5-format-error_res.txt  in6-Solvable.txt  in6-format-error_res.txt  in7-format-error.txt  in7-format-error_res.txt  out-test.txt
ex1_320827694_302893680/: makefile  readme.txt  students.txt
ex1_320827694_302893680 2/: JigsawPuzzle.cpp
ex2_320827694_302893680/: Factory.cpp  JigsawPuzzleAbstract.cpp  JigsawPuzzleRotations.cpp  PuzzlePiecesMap.h  PuzzlePiecesMapWithRotate.cpp  PuzzleType.cpp  SolutionAlgorithm.h  gameFlow.cpp  gameFlow.h
ex3_320827694_302893680/: JigsawPuzzleRotations.h  JigsawSolutionExistsChecks.h  JigsawSolutionThread.cpp  PuzzlePiece.h  PuzzlePieceRotation.cpp  PuzzleRequirement.h  PuzzleTypeWithRotation.h  SolutionAlgorithm.cpp  SolutionAlgorithm.h  SolutionAlgorithmRunningSuite.cpp  SolutionAlgorithmRunningSuite.h  ex3  gameFlow.cpp  gameFlow.h  readme.txt
hw4/: AbstractPuzzlePiece.h  BoundedInt.h  BoundedIntCondition.h  Puzzle2dPiece.h  Puzzle3dPiece.h  PuzzleCondition.h  PuzzleGroups.h  compilation_command.txt  ex4headers.h  main.cpp
hw4/APEX4/APEX4/: main.cpp
hw4/APEX4/APEX4.xcodeproj/: project.pbxproj
hw4/APEX4/APEX4.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
hw4/APEX4/APEX4.xcodeproj/project.xcworkspace/xcuserdata/alexs.xcuserdatad/: UserInterfaceState.xcuserstate
hw4/APEX4/APEX4.xcodeproj/xcuserdata/alexs.xcuserdatad/xcschemes/: APEX4.xcscheme  xcschememanagement.plist
moav_tests_before_ex2/: test1_student_res.out  test2_student_res.out  test3_student_res.out  test4_student_res.out  test6_student_res.out  test7_student_res.out
moav_tests_for_ex1/: test5_student_res.out  test8_student_res.out
test_files/: error_input_file_1.txt  error_input_file_1_res.txt  error_input_file_2_res.txt  in1-Unsolvable.txt  in1.txt  in2-Unsolvable.txt  in2-format-error.txt  in2.txt  in3-Unsolvable_res.txt  in3-format-error_res.txt  in3.txt  in4-Solvable2.txt  in4-format-error.txt  in4.txt  in5-Unsolvable.txt  in5-format-error.txt  in5.txt  in6-Solvable.txt  in6-Unsolvable.txt  in7-Unsolvable.txt  input_file_1.txt  input_file_2.txt  out1.txt  out2-format-error.txt  out2.txt  out3-Unsolvable.txt  out3.txt  out4-Solvable.txt  out5-Unsolvable.txt  out5.txt  test2.txt  test3.txt  test4.txt  test5.txt
